--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
 </head>
 <body>
 <h2>Watch Dogs [BLES01854]-[Gutamps Official]</h2>
-<anotepad><p>Part 1 : <a href="https://drive.google.com/file/d/1Wfx0kJPXNdn7IgmB15EdluaZFDkxJoEl/view?usp=sharing" target="_blank" rel="noopener">https://drive.google.com/file/d/1Wfx0kJPXNdn7IgmB15EdluaZFDkxJoEl/view?usp=sharing</a></p>
-<p>Part 2 : <a href="https://drive.google.com/file/d/1spQVBPjIhmZk-3AJKogh1nKlM0vnzVCf/view?usp=sharing" target="_blank" rel="noopener">https://drive.google.com/file/d/1spQVBPjIhmZk-3AJKogh1nKlM0vnzVCf/view?usp=sharing</a></p>
-<p>Part 3 : <a href="https://drive.google.com/file/d/10NqGFNEMFu_FAmicFttGVp66PrtxLEsc/view?usp=sharing" target="_blank" rel="noopener">https://drive.google.com/file/d/10NqGFNEMFu_FAmicFttGVp66PrtxLEsc/view?usp=sharing</a></p>
-<p>Part 4 : <a href="https://drive.google.com/file/d/1AjPkmnSIoBodJ5Om3kzEXu1pOQKvMMaG/view?usp=sharing" target="_blank" rel="noopener">https://drive.google.com/file/d/1AjPkmnSIoBodJ5Om3kzEXu1pOQKvMMaG/view?usp=sharing</a></p>
-<p>Part 5 : <a href="https://drive.google.com/file/d/1QOzSsmHP-8yF6DtlG5024B66HE2vZiQo/view?usp=sharing" target="_blank" rel="noopener">https://drive.google.com/file/d/1QOzSsmHP-8yF6DtlG5024B66HE2vZiQo/view?usp=sharing</a></p>
-<p>Part 6 : <a href="https://drive.google.com/file/d/166tduhzSHa9cdWIY124s6VN2EJA-bMlD/view?usp=sharing" target="_blank" rel="noopener">https://drive.google.com/file/d/166tduhzSHa9cdWIY124s6VN2EJA-bMlD/view?usp=sharing</a></p>
-<p>Part 7 : <a href="https://drive.google.com/file/d/1jxUyTQekX-LgiPXttBTfh9O-CnVRkemE/view?usp=sharing" target="_blank" rel="noopener">https://drive.google.com/file/d/1jxUyTQekX-LgiPXttBTfh9O-CnVRkemE/view?usp=sharing</a></p>
-<p>Part 8 : <a href="https://drive.google.com/file/d/1VzFFS0TFG8r8MpGZ6oFthcfiGITlixrk/view?usp=sharing" target="_blank" rel="noopener">https://drive.google.com/file/d/1VzFFS0TFG8r8MpGZ6oFthcfiGITlixrk/view?usp=sharing</a></p>
+<anotepad><p>Part 1 : <a href="https://drive.google.com/file/d/1Wfx0kJPXNdn7IgmB15EdluaZFDkxJoEl/view?usp=sharing" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 2 : <a href="https://drive.google.com/file/d/1spQVBPjIhmZk-3AJKogh1nKlM0vnzVCf/view?usp=sharing" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 3 : <a href="https://drive.google.com/file/d/10NqGFNEMFu_FAmicFttGVp66PrtxLEsc/view?usp=sharing" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 4 : <a href="https://drive.google.com/file/d/1AjPkmnSIoBodJ5Om3kzEXu1pOQKvMMaG/view?usp=sharing" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 5 : <a href="https://drive.google.com/file/d/1QOzSsmHP-8yF6DtlG5024B66HE2vZiQo/view?usp=sharing" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 6 : <a href="https://drive.google.com/file/d/166tduhzSHa9cdWIY124s6VN2EJA-bMlD/view?usp=sharing" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 7 : <a href="https://drive.google.com/file/d/1QUTz0j1TFyUihKJMJB0XdtsLcU98wP70/view?usp=drive_link" target="_blank" rel="noopener">Get Link</a></p>
 <p>&nbsp;</p></anotepad>
 </body>
 </html>
